# remotebrain

./: LICENSE  README.md  pyproject.toml
src/remotebrain/cli/: run.py
src/remotebrain/data/: io.py  loader.py
src/remotebrain/distributed/: executor.py  worker.py
src/remotebrain/inference/: inference_unet.py  membrain.py
